--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 100vh; 
   width: 100%; 
